changed UI a little bit

--- a/Ilmhub.Wordle/Pages/Home.razor
+++ b/Ilmhub.Wordle/Pages/Home.razor
@@ -1,3 +1,20 @@
 ﻿@page "/"
 
-Home
+<div class="d-flex flex-column flex-md-row gap-5 position-absolute top-50 start-50 translate-middle">
+    <div class="card" style="height: 10rem; width: 10rem;">
+        <img src="https://api.dicebear.com/9.x/fun-emoji/svg?eyes=stars&translateY=-15&scale=90" class="card-img" alt="Ilmhub English Kids">
+        <div class="card-img-overlay d-flex justify-content-center align-items-end">
+            <a href="phonics" class="h2 m-0 mt-1 text-decoration-none stretched-link link-body-emphasis">
+                Kids
+            </a> 
+        </div>
+    </div>
+    <div class="card" style="height: 10rem; width: 10rem;">
+        <img src="https://api.dicebear.com/9.x/adventurer-neutral/svg?seed=Harley&translateY=-5" class="card-img" alt="Ilmhub English Junior">
+        <div class="card-img-overlay link-text-success d-flex justify-content-center align-items-end">
+            <a href="#" class="h2 m-0 mt-1 text-decoration-none stretched-link link-body-emphasis">
+                Junior
+            </a> 
+        </div>
+    </div>
+</div>
