--- a/Ilmhub.Wordle/Components/Shared/RecordingWave.razor.css
+++ b/Ilmhub.Wordle/Components/Shared/RecordingWave.razor.css
@@ -1,6 +1,6 @@
 
 .recording-wave-container {
-    height: 100px;
+    height: 2rem;
     display: flex;
     align-items: center;
 
@@ -8,9 +8,8 @@
 
 .recording-wave-container .recording-wave-stroke {
     display: block;
-    position: relative;
     height: 100%;
-    width: 10px;
+    width: .2rem;
     animation: animate 1s linear infinite;
 }
 
